# BPC

./: .gitignore  01_build_plain_parquet.py  02_plot_dataset_pie.py  README.md  pyproject.toml
bpc/: __init__.py  data.py  model.py  pipeline.py
