[project]
name = "bpc"
version = "1.0.0"
description = "Background plain classification."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "matplotlib==3.10.7",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "pandas==2.3.3",
    "pillow==10.4.0",
    "pyarrow==22.0.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
onnx = [
    "onnx==1.19.0",
    "onnxsim-prebuilt==0.4.39.post2",
]
demo-gpu = [
    "onnxruntime-gpu==1.26.0",
]
logging = [
    "tensorboard==2.17.1",
]

[project.scripts]
bpc = "bpc.pipeline:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bpc*"]
